# 3DRasterizer

./: .gitignore  CMakeLists.txt  README.md
include/: graphics.h  rasterizer_graphics.h  rasterizer_math.h
src/: graphics.cpp  main.cpp  rasterizer_graphics.cpp  rasterizer_math.cpp
